assets/css/mas712.scss
---
# This is the required front matter needed to process this sass file and output it in the same directory
---

html, body {
	margin: 0;
	height: 100%;
}

body {
	font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif;
}

/* Peg grid */

$peg-size: 49px;

.peg {
  width: $peg-size;
  height: $peg-size;
  margin: 0;
  padding: 0;
}

#peg-grid {
  position: relative;
  background-color: #000;
  width: 100%;
  height: $peg-size * 6;
  overflow: hidden;
  margin-bottom: 30px;
}

#peg-grid-overflow {
  width: 3000px;
  height: 100%;
}

#peg-grid-title {
  position: absolute;
  top: $peg-size * 1;
  left: $peg-size * 2;
  width: $peg-size * 14;
  height: $peg-size * 2;
  padding-left: 29px;
  padding-top: 20px;
  font-size: 36px;
  font-weight: bold;
  background-color: black;
  color: white;
}

#peg-grid-subtitle {
  position: absolute;
  top: $peg-size * 4;
  left: $peg-size * 2;
  width: $peg-size * 10;
  height: $peg-size * 1;
  padding-left: 29px;
  padding-top: 9px;
  font-size: 22px;
  background-color: black;
  color: white;
}

@media (max-width: 767px) {
  #peg-grid-title {
    top: $peg-size * 1;
    left: $peg-size * 1;
    width: $peg-size * 4;
    height: $peg-size * 3;
    padding-top: 13px;
    line-height: 1.1em;
    padding-left: 21px;
  }

  #peg-grid-subtitle {
    top: $peg-size * 5;
    left: $peg-size * 1;
    width: $peg-size * 7;
    height: $peg-size * 3;
    line-height: 1.1em;
    padding-left: 21px;
  }
}

@media (min-width: 768px) and (max-width: 991px) {
  #peg-grid-title {
    top: $peg-size * 2;
    left: $peg-size * 2;
    width: $peg-size * 10;
    height: $peg-size * 2;
  }

  #peg-grid-subtitle {
    top: $peg-size * 5;
    left: $peg-size * 2;
    width: $peg-size * 12;
    height: $peg-size * 2;
    line-height: 1.1em;
  }
}

/* Front page */
.front-page-list-item {
  font-size: 22px;
  padding-left: 31px;
}

.front-page-current-indicator {
  width: 18px;
  height: 18px;
  margin-left: 7px;
  margin-bottom: 4px;
}

.first-day-form {
	margin-bottom: 41px;
}

/* Page Layout */
#background-pegs {
  margin: 0;
  padding: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: -1;
  background-color: #000;
  overflow: hidden;
}

.background-peg {
  position: absolute;
  width: $peg-size;
  height: $peg-size;
  opacity: 0.2;
}

.navbar-peg {
	width: 30px;
	height: 30px;
	margin-bottom: 5px;
}

#navbar-weeks-dropdown {
	left: -150px; // Kind of a bad hack
}

.front-page-content {
	padding-top: 21px;
	padding-bottom: 21px;
}

.page-content {
	padding-top: 101px;
}

.google-doc-content {
	width: 100%;
	min-height: 500px;
	border: none;
	outline: none;
  background-color: #fff;
  padding: 31px;
  border-radius: .3rem;
}

.week-jumbotron {
  background-color: #f0f4f6;
	padding-top: 2rem;
	padding-bottom: 1.5rem;
}

.jumbotron-peg {
	width: 40px;
	height: 40px;
	margin-left: 9px;
	margin-right: 9px;
	margin-bottom: 8px;
}

/* Footer */
.footer-container {
	padding-top: 41px;
	padding-bottom: 61px;
	background-color: #f0f4f6;
}

.footer-content {
	padding-left: 25px;
}

#footer-peg-1 {
  position: relative;
  top: -26px;
  left: 49px;
}

#footer-peg-2 {
  position: relative;
  top: 23px;
}

#footer-peg-3 {
  position: relative;
  top: 23px;
}

#footer-peg-4 {
  position: relative;
  top: 72px;
}

/* 404 Error Page */

.error-404-content {
  margin-top: 101px;
  padding: 21px;
  background-color: #fff;
  border-radius: .3rem;
}

